force-app/main/default/objects/Speaker__c/fields/Specialisation__c.field-meta.xml
<CustomField>
    <fullName>Specialisation__c</fullName>
    <description>Área de especialidade médica ou técnica do palestrante.</description>
    <inlineHelpText>Descreva a área de atuação (ex: Cardiologia).</inlineHelpText>
    <label>Specialisation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>